# mlops_group_11

./: .dockerignore  .gcloudignore  .gitignore  .pre-commit-config.yaml  DATA.md  README.md  WANDB_SWEEP_GUIDE.md  cloudbuild.yaml  data.dvc  docker-compose.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: cml-data.yaml  cml_data.yaml  docker-building.yaml  linting.yaml  pre-commit-update.yaml  pre-commit.yaml  tests.yaml
api/bentoML/: configuration.yaml  service.py  start_service.sh
configs/: cloudbuild.yaml  config.yaml  sweep.yaml  training_conf.yaml
deployment/api/: Dockerfile  api.dockerfile  drift.dockerfile  frontend.dockerfile  label_names.json  main.py  requirements.txt
deployment/api/mlops_group_11/: data_drift.py  frontend.py  model.py
dockerfiles/: api.dockerfile  evaluate.dockerfile  frontend.dockerfile  train.dockerfile  train_vertex.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
notebooks/: inspect_data.ipynb
outputs/2026-01-10/17-06-58/.hydra/: config.yaml
reports/: README.md  evaluation_metrics.txt
scripts/: convert_to_onnx.py  create_sweep.py  download_data_gcs.py  experimental_convert_to_onnx.py  experimental_convert_to_torchscript.py
src/mlops_group_11/: adaptive_avg_pool_2d_custom.py  api.py  data.py  data_drift.py  evaluate.py  frontend.py  model.py  train.py
src/mlops_group_11/api/: fast_api.py  test_dummy_data.py
src/mlops_group_11/api/bentoML/: client.py  service.py
src/mlops_group_11/bentoML/: client.py  service.py
tests/: __init__.py  test_api.py  test_data.py  test_evaluate.py  test_model.py  test_training.py
tests/performancetests/: locust_test.py  locustfile.py
